front end fixes aligned divs wrappers buttons etc

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,12 +4,12 @@
 
 
 .article-form-title {
-  width: 300px;
+  width: 400px;
   border-radius: 4px;
 }
 
 .article-form-body {
-  width: 300px;
+  width: 400px;
   height: 200px;
   border-radius: 4px
 }
