--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -45,3 +45,13 @@
   font-weight: lighter;
   opacity: 0.6;
 }
+
+.btn-edit {
+  background: silver;
+  color: #FFFFFF;
+  padding: 4px 4px;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: lighter;
+  opacity: 0.9;
+}
