--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -5,6 +5,7 @@
   border-radius: 3px;
   margin: 10px;
   padding-left: 15px;
+  padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 10px;
   font-family: 'Nunito', sans-serif;
@@ -13,7 +14,6 @@
 }
 
 .card p {
-  max-width: 90%;
   overflow: auto;
 }
 
